CSS improvements, fixing word wrap

--- a/css/default.css
+++ b/css/default.css
@@ -49,6 +49,9 @@ ul.projects li {
 }
 pre {
     margin-bottom: 17px;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
 }
 
 /* body { */
@@ -109,6 +112,7 @@ div.info {
 }
 
 pre.sourceCode {
+    padding: 3px 10px 3px 10px;
     background-color: #F5F5F5;
 }
 
@@ -144,3 +148,7 @@ td.sourceCode { padding-left: 5px; }
 /* */
 .sourceCode span.er { color: red; font-weight: bold; }
 
+blockquote {
+  background-color: #eee;
+  padding: 3px 10px 3px 10px;
+}
